--- a/Prey and Predator/Prey and Predator.csproj
+++ b/Prey and Predator/Prey and Predator.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Prey_and_Predator</RootNamespace>
   </PropertyGroup>
 
 </Project>
